Fixed complete task green screen cutting off at bottom

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -55,11 +55,17 @@
 }
 
 .complete-task-modal {
-  --background: var(--ion-color-success);
   .modal-wrapper {
     --height: 100%;
-    position: absolute;
+
     bottom: 7%;
+  }
+
+  .complete-task-div {
+    height: 100vh;
+    width: 100vw;
+    background: var(--ion-color-success);
+    position: absolute;
   }
 
   img {
